Actualizacion de Navbar,Carrusel y agregue Acerca de + animaciones

--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -5,3 +5,20 @@
 /* En tu archivo globals.css */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap');
 
+@keyframes gradientAnimation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+}
+
+.animate-gradient-background {
+    background: linear-gradient(45deg, #F5F5F5, #ECE9D8, #EAEAEA); /* Usamos colores más suaves y mates */
+    background-size: 300% 300%;
+    animation: gradientAnimation 6s ease infinite; /* Animación más rápida */
+}
