--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -5,6 +5,14 @@
 /* En tu archivo globals.css */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap');
 
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100%;
+}
+
+
 @keyframes gradientAnimation {
     0% {
       background-position: 0% 50%;
