--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -3,30 +3,41 @@
 @tailwind utilities;
 
 /* En tu archivo globals.css */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap");
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   width: 100%;
 }
 
-
 @keyframes gradientAnimation {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .animate-gradient-background {
-    background: linear-gradient(45deg, #F5F5F5, #ECE9D8, #EAEAEA); /* Usamos colores más suaves y mates */
-    background-size: 300% 300%;
-    animation: gradientAnimation 6s ease infinite; /* Animación más rápida */
+  background: linear-gradient(
+    45deg,
+    #f5f5f5,
+    #ece9d8,
+    #eaeaea
+  ); /* Usamos colores más suaves y mates */
+  background-size: 300% 300%;
+  animation: gradientAnimation 6s ease infinite; /* Animación más rápida */
+}
+
+.react-datepicker__day--highlighted-custom-occupied {
+  background-color: #f87171; /* Rojo claro */
+  color: white;
+  border-radius: 50%;
 }
